--- a/sourcecode/ORCAUnitTest/html/ORCAUnitTest/TestApplication.html
+++ b/sourcecode/ORCAUnitTest/html/ORCAUnitTest/TestApplication.html
@@ -216,8 +216,8 @@
     <div class="Remarks" id="T:ORCAUnitTest.TestApplication:Docs">
       <h2 class="Section">Remarks</h2>
       <div class="SectionBox" id="T:ORCAUnitTest.TestApplication:Docs:Remarks">
-        <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-      </div>
+            dynamiを返すCreateItemで怒られるのの対策
+            </div>
       <h2 class="Section">Requirements</h2>
       <div class="SectionBox" id="T:ORCAUnitTest.TestApplication:Docs:Version Information">
         <b>Namespace: </b>ORCAUnitTest<br /><b>Assembly: </b>ORCAUnitTest (in ORCAUnitTest.dll)<br /><b>Assembly Versions: </b>1.0.0.0</div>
